# kaist_autopilot_programming_ros

./: CMakeLists.txt  README.md  package.xml
include/kaist_autopilot_programming_ros/: purePursuit.cpp  purePursuit.h  rrtTree.cpp  rrtTree.h
kaist_autopilot/: ISSUE_TEMPLATE.md  README.md
kaist_autopilot/kaist/: CMakeLists.txt  package.xml
kaist_autopilot/kaist_bringup/: CMakeLists.txt  package.xml
kaist_autopilot/kaist_bringup/launch/: kaist_core.launch  kaist_lidar.launch  kaist_model.launch  kaist_remote.launch  kaist_robot.launch  kaist_rpicamera.launch
kaist_autopilot/kaist_bringup/launch/includes/: description.launch.xml
kaist_autopilot/kaist_bringup/scripts/: create_udev_rules
kaist_autopilot/kaist_bringup/src/: kaist_diagnostics.cpp
kaist_autopilot/kaist_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
kaist_autopilot/kaist_description/urdf/: kaist_burger.urdf.xacro  kaist_burger_for_autorace.urdf.xacro  kaist_waffle.urdf.xacro  kaist_waffle_for_open_manipulator.urdf.xacro  kaist_waffle_pi.urdf.xacro  kaist_waffle_pi_for_open_manipulator.urdf.xacro
kaist_autopilot/kaist_example/: CMakeLists.txt  package.xml  setup.py
kaist_autopilot/kaist_example/launch/: interactive_markers.launch  kaist_bumper.launch  kaist_client.launch  kaist_cliff.launch  kaist_illumination.launch  kaist_obstacle.launch  kaist_pointop_key.launch  kaist_sonar.launch
kaist_autopilot/kaist_example/nodes/: kaist_bumper  kaist_client  kaist_cliff  kaist_illumination  kaist_marker_server  kaist_obstacle  kaist_pointop_key  kaist_server  kaist_sonar
kaist_autopilot/kaist_example/rviz/: kaist_interactive.rviz
kaist_autopilot/kaist_navigation/: CMakeLists.txt  package.xml
kaist_autopilot/kaist_navigation/launch/: kaist_navigation.launch  move_base.launch
kaist_autopilot/kaist_navigation/maps/: map.pgm  map.yaml
kaist_autopilot/kaist_slam/: CMakeLists.txt  package.xml
kaist_autopilot/kaist_slam/bag/: bag_files.md
kaist_autopilot/kaist_slam/launch/: kaist_cartographer.launch  kaist_frontier_exploration.launch  kaist_gmapping.launch  kaist_hector.launch  kaist_karto.launch  kaist_slam.launch
kaist_autopilot/kaist_slam/src/: flat_world_imu_node.cpp
kaist_autopilot/kaist_teleop/: CMakeLists.txt  package.xml  setup.py
kaist_autopilot/kaist_teleop/launch/: kaist_teleop_key.launch
kaist_autopilot/kaist_teleop/nodes/: kaist_teleop_key
kaist_autopilot_msgs/: CMakeLists.txt  package.xml
kaist_autopilot_msgs/msg/: VersionInfo.msg
kaist_autopilot_simulations/kaist_gazebo/: CMakeLists.txt  package.xml
kaist_autopilot_simulations/kaist_gazebo/launch/: kaist_autorace.launch  kaist_autorace_mission.launch  kaist_empty_world.launch  kaist_house.launch  kaist_simulation.launch  kaist_stage_1.launch  kaist_stage_2.launch  kaist_stage_3.launch  kaist_stage_4.launch  kaist_world.launch  multi_kaist.launch  multi_kaist_slam.launch
kaist_autopilot_simulations/kaist_gazebo/models/kaist_burger/: model-1_4.sdf  model.sdf
kaist_autopilot_simulations/kaist_gazebo/models/kaist_house/: model.sdf
kaist_autopilot_simulations/kaist_gazebo/models/kaist_plaza/: model.config  model.sdf
kaist_autopilot_simulations/kaist_gazebo/models/kaist_square/: model.config  model.sdf
kaist_autopilot_simulations/kaist_gazebo/models/kaist_waffle/: model-1_4.sdf  model.sdf
kaist_autopilot_simulations/kaist_gazebo/models/kaist_waffle_pi/: model-1_4.sdf  model.sdf
kaist_autopilot_simulations/kaist_gazebo/models/kaist_world/: model-1_4.sdf  model.sdf
kaist_autopilot_simulations/kaist_gazebo/src/: kaist_drive.cpp
kaist_autopilot_simulations/kaist_gazebo/worlds/: kaist_house.world  kaist_stage_1.world  kaist_stage_2.world  kaist_stage_3.world  kaist_stage_4.world  kaist_world.world
kaist_autopilot_simulations/kaist_simulations/: CMakeLists.txt  package.xml
launch/: project3.launch  project3_dynamic.launch
src/: kinect_viewer.cpp  main.cpp
worlds/: project3.world
