<?xml version="1.0"?>
<package format="2">
  <name>kaist</name>
  <version>1.0.0</version>
  <description>
    ROS packages for the Kaist (meta package)
  </description>
  <license>Apache 2.0</license>
  <license>BSD</license>
  <author email="pyo@robotis.com">Pyo</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="kkjong@robotis.com">Gilbert</author>
  <author email="chc@robotis.com">HanCheol Cho</author>
  <author>Leon Jung</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/turtlebot3</url>
  <url type="emanual">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>kaist_bringup</exec_depend>
  <exec_depend>kaist_description</exec_depend>
  <exec_depend>kaist_example</exec_depend>
  <exec_depend>kaist_navigation</exec_depend>
  <exec_depend>kaist_slam</exec_depend>
  <exec_depend>kaist_teleop</exec_depend>
  <export><metapackage/></export>
</package>
